--- a/views/_header.pug
+++ b/views/_header.pug
@@ -1,19 +1,14 @@
 header.header
   nav.nav.nav--tours
-    a.nav__el(href='#') All tours
-    form.nav__search
-      button.nav__search-btn
-        svg
-          use(xlink:href='img/icons.svg#icon-search')
-      input.nav__search-input(type='text' placeholder='Search tours')
+    a.nav__el(href='/') All tours
   .header__logo
-    img(src='img/logo_2.png' alt='Danatours logo')
+    img(src='/img/logo_2.png' alt='Danatours logo')
   nav.nav.nav--user
-    a.nav__el(href='#') My bookings
-    a.nav__el(href='#')
-      img.nav__user-img(src='img/user.jpg' alt='User photo')
-      span Lakshman
-    //
-      <button class="nav__el">Log in</button>
-      <button class="nav__el nav__el--cta">Sign up</button>
-// In video, this <main> element is wrongly called: <section class="overview">. So in pug template, please use main.main instead of section.overview
+    if user
+      a.nav__el.nav__el--logout Log out
+      a.nav__el(href='/me')
+        img.nav__user-img(src=`/img/users/${user.photo}` alt=`Photo of ${user.name}`)
+        span= user.name.split(' ')[0]
+    else
+      a.nav__el(href='/login') Log in
+      a.nav__el.nav__el--cta(href='#') Sign up
