--- a/views/base.pug
+++ b/views/base.pug
@@ -1,227 +1,26 @@
 doctype html
-head
-  meta(charset='UTF-8')
-  meta(name='viewport' content='width=device-width, initial-scale=1.0')
-  link(href='https://fonts.googleapis.com/css?family=Lato:300,300i,700' rel='stylesheet')
-  link(rel='stylesheet' href='css/style.css')
-  link(rel='shortcut icon' type='image/png' href='img/favicon.jpg')
-  title Danatours | Exciting tours for adventurous people
-
-// HEADER
-include _header
-
-main.main
-  .card-container
-    .card
-      .card__header
-        .card__picture
-          .card__picture-overlay &nbsp;
-          img.card__picture-img(src='img/tours/tour-1-cover.jpg' alt='Tour 1')
-        h3.heading-tertirary
-          span The Forest Hiker
-      .card__details
-        h4.card__sub-heading Easy 5-day tour
-        p.card__text
-          | Breathtaking hike through the Canadian Banff National Park
-        .card__data
-          svg.card__icon
-            use(xlink:href='img/icons.svg#icon-map-pin')
-          span Banff, Canada
-        .card__data
-          svg.card__icon
-            use(xlink:href='img/icons.svg#icon-calendar')
-          span April 2021
-        .card__data
-          svg.card__icon
-            use(xlink:href='img/icons.svg#icon-flag')
-          span 3 stops
-        .card__data
-          svg.card__icon
-            use(xlink:href='img/icons.svg#icon-user')
-          span 25 people
-      .card__footer
-        p
-          span.card__footer-value $297
-          span.card__footer-text per person
-        p.card__ratings
-          span.card__footer-value 4.9
-          span.card__footer-text rating (21)
-        a.btn.btn--green.btn--small(href='#') Details
-    .card
-      .card__header
-        .card__picture
-          .card__picture-overlay &nbsp;
-          img.card__picture-img(src='img/tours/tour-2-cover.jpg' alt='Tour 1')
-        h3.heading-tertirary
-          span The Sea Explorer
-      .card__details
-        h4.card__sub-heading Medium-difficult 7-day tour
-        p.card__text
-          | Exploring the jaw-dropping US east coast by foot and by boat
-        .card__data
-          svg.card__icon
-            use(xlink:href='img/icons.svg#icon-map-pin')
-          span Oregon, US
-        .card__data
-          svg.card__icon
-            use(xlink:href='img/icons.svg#icon-calendar')
-          span June 2021
-        .card__data
-          svg.card__icon
-            use(xlink:href='img/icons.svg#icon-flag')
-          span 4 stops
-        .card__data
-          svg.card__icon
-            use(xlink:href='img/icons.svg#icon-user')
-          span 15 people
-      .card__footer
-        p
-          span.card__footer-value $497
-          span.card__footer-text per person
-        p.card__ratings
-          span.card__footer-value 4.8
-          span.card__footer-text rating (12)
-        a.btn.btn--green.btn--small(href='#') Details
-    .card
-      .card__header
-        .card__picture
-          .card__picture-overlay &nbsp;
-          img.card__picture-img(src='img/tours/tour-3-cover.jpg' alt='Tour 1')
-        h3.heading-tertirary
-          span The Snow Adventurer
-      .card__details
-        h4.card__sub-heading Difficult 3-day tour
-        p.card__text
-          | Exciting adventure in the snow with snowboarding and skiing
-        .card__data
-          svg.card__icon
-            use(xlink:href='img/icons.svg#icon-map-pin')
-          span Aspen, USA
-        .card__data
-          svg.card__icon
-            use(xlink:href='img/icons.svg#icon-calendar')
-          span January 2022
-        .card__data
-          svg.card__icon
-            use(xlink:href='img/icons.svg#icon-flag')
-          span 2 stops
-        .card__data
-          svg.card__icon
-            use(xlink:href='img/icons.svg#icon-user')
-          span 10 people
-      .card__footer
-        p
-          span.card__footer-value $697
-          span.card__footer-text per person
-        p.card__ratings
-          span.card__footer-value 4.9
-          span.card__footer-text rating (7)
-        a.btn.btn--green.btn--small(href='#') Details
-    .card
-      .card__header
-        .card__picture
-          .card__picture-overlay &nbsp;
-          img.card__picture-img(src='img/tours/tour-4-cover.jpg' alt='Tour 1')
-        h3.heading-tertirary
-          span The City Wanderer
-      .card__details
-        h4.card__sub-heading Easy 7-day tour
-        p.card__text
-          | Living the life of Wanderlust in the US&apos; most beatiful cities
-        .card__data
-          svg.card__icon
-            use(xlink:href='img/icons.svg#icon-map-pin')
-          span NYC, USA
-        .card__data
-          svg.card__icon
-            use(xlink:href='img/icons.svg#icon-calendar')
-          span March 2021
-        .card__data
-          svg.card__icon
-            use(xlink:href='img/icons.svg#icon-flag')
-          span 3 stops
-        .card__data
-          svg.card__icon
-            use(xlink:href='img/icons.svg#icon-user')
-          span 20 people
-      .card__footer
-        p
-          span.card__footer-value $997
-          span.card__footer-text per person
-        p.card__ratings
-          span.card__footer-value 4.8
-          span.card__footer-text rating (31)
-        a.btn.btn--green.btn--small(href='#') Details
-    .card
-      .card__header
-        .card__picture
-          .card__picture-overlay &nbsp;
-          img.card__picture-img(src='img/tours/tour-5-cover.jpg' alt='Tour 1')
-        h3.heading-tertirary
-          span The Park Camper
-      .card__details
-        h4.card__sub-heading Medium-Difficult 10-day tour
-        p.card__text
-          | Breathing in Nature in America&apos;s most spectacular National Parks
-        .card__data
-          svg.card__icon
-            use(xlink:href='img/icons.svg#icon-map-pin')
-          span Las Vegas, USA
-        .card__data
-          svg.card__icon
-            use(xlink:href='img/icons.svg#icon-calendar')
-          span August 2021
-        .card__data
-          svg.card__icon
-            use(xlink:href='img/icons.svg#icon-flag')
-          span 4 stops
-        .card__data
-          svg.card__icon
-            use(xlink:href='img/icons.svg#icon-user')
-          span 15 people
-      .card__footer
-        p
-          span.card__footer-value $1,497
-          span.card__footer-text per person
-        p.card__ratings
-          span.card__footer-value 4.9
-          span.card__footer-text rating (19)
-        a.btn.btn--green.btn--small(href='/tour.html') Details
-    .card
-      .card__header
-        .card__picture
-          .card__picture-overlay &nbsp;
-          img.card__picture-img(src='img/tours/tour-6-cover.jpg' alt='Tour 1')
-        h3.heading-tertirary
-          span The Sports Lover
-      .card__details
-        h4.card__sub-heading Difficult 14-day tour
-        p.card__text
-          | Surfing, skating, parajumping, rock climbing and more, all in one
-          | tour
-        .card__data
-          svg.card__icon
-            use(xlink:href='img/icons.svg#icon-map-pin')
-          span California, USA
-        .card__data
-          svg.card__icon
-            use(xlink:href='img/icons.svg#icon-calendar')
-          span July 2021
-        .card__data
-          svg.card__icon
-            use(xlink:href='img/icons.svg#icon-flag')
-          span 5 stops
-        .card__data
-          svg.card__icon
-            use(xlink:href='img/icons.svg#icon-user')
-          span 8 people
-      .card__footer
-        p
-          span.card__footer-value $1,997
-          span.card__footer-text per person
-        p.card__ratings
-          span.card__footer-value 4.7
-          span.card__footer-text rating (23)
-        a.btn.btn--green.btn--small(href='#') Details
-// FOOTER
-include _footer
+html
+  head
+    block head
+      meta(charset='UTF-8')
+      meta(name='viewport' content='width=device-width, initial-scale=1.0')
+      link(rel='stylesheet' href='/css/style.css')
+      link(rel='shortcut icon' type='image/png' href='/img/favicon.png')
+      link(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lato:300,300i,700')
+      title Danatours | #{title}
+  
+  body
+    // HEADER
+    include _header
+        
+    // CONTENT
+    block content
+      h1 This is a placeholder heading
+      
+    // FOOTER
+    include _footer
+    
+    //- script(src='https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js')
+    //- script(src='/js/mapbox.js')
+    //- script(src='/js/login.js')
+    script(src='/js/bundle.js')
