--- a/views/base.pug
+++ b/views/base.pug
@@ -24,4 +24,5 @@ html
     script(src='/js/mapbox.js')
     script(src='/js/login.js')
     script(src='/js/updateSettings.js')
+    //- script(src='/js/stripe.js')
     //- script(src='/js/bundle.js')
