--- a/views/tour.pug
+++ b/views/tour.pug
@@ -4,6 +4,7 @@ include _reviewCard
 block append head
   script(src='/js/mapbox-gl.js')
   link(href='/css/mapbox-gl.css' rel='stylesheet')
+  //- script(src='/js/Stripe.js')
 
 
 mixin overviewBox(label, text, icon)
