--- a/views/base.pug
+++ b/views/base.pug
@@ -22,6 +22,7 @@ html
     
     script(src='https://cdnjs.cloudflare.com/ajax/libs/axios/0.26.0/axios.min.js')
     script(src='/js/mapbox.js')
+    script(src='/js/signup.js')
     script(src='/js/login.js')
     script(src='/js/updateSettings.js')
     //- script(src='/js/stripe.js')
