--- a/views/account.pug
+++ b/views/account.pug
@@ -13,7 +13,7 @@ block content
       nav.user-view__menu
         ul.side-nav
           +navItem('#', 'Settings', 'settings', true)
-          +navItem('#', 'My bookings', 'briefcase')
+          +navItem('/my-tours', 'My bookings', 'briefcase')
           +navItem('#', 'My reviews', 'star')
           +navItem('#', 'Billing', 'credit-card')
 
@@ -30,10 +30,6 @@ block content
         .user-view__form-container
           h2.heading-secondary.ma-bt-md Your account settings
           
-          //- WITHOUT API
-          //- form.form.form-user-data(action='/submit-user-data' method='POST' enctype='multipart/form-data')
-          
-          //- WITH API
           form.form.form-user-data
             .form__group
               label.form__label(for='name') Name
