--- a/views/base.pug
+++ b/views/base.pug
@@ -25,5 +25,6 @@ html
     script(src='/js/signup.js')
     script(src='/js/login.js')
     script(src='/js/updateSettings.js')
-    //- script(src='/js/stripe.js')
+    script(src='https://js.stripe.com/v3/')
+    script(src='/js/stripe.js' crossorigin='anonymous')
     //- script(src='/js/bundle.js')
