cors error finished

--- a/views/base.pug
+++ b/views/base.pug
@@ -21,10 +21,12 @@ html
     include _footer
     
     script(src='https://cdnjs.cloudflare.com/ajax/libs/axios/0.26.0/axios.min.js')
+    script(src='https://js.stripe.com/v3/' )
+
     script(src='/js/mapbox.js')
     script(src='/js/signup.js')
     script(src='/js/login.js')
     script(src='/js/updateSettings.js')
-    script(src='https://js.stripe.com/v3/')
-    script(src='/js/stripe.js' crossorigin='anonymous')
+    //- script(src='/js/Stripe.js')
+    script(src='/js/stripe.js')
     //- script(src='/js/bundle.js')
