--- a/views/tour.pug
+++ b/views/tour.pug
@@ -2,8 +2,11 @@ extends base
 include _reviewCard
 
 block append head
-  script(src='/js/mapbox-gl.js')
-  link(href='/css/mapbox-gl.css' rel='stylesheet')
+  //- script(src='/js/mapbox-gl.js')
+  //- link(href='/css/mapbox-gl.css' rel='stylesheet')
+  <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.js'></script>
+  <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.css' rel='stylesheet' />
+  <script src="https://js.stripe.com/v3/"></script>
 
 mixin overviewBox(label, text, icon)
   .overview-box__detail
